--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="description">Lorem ipsum dolor sit amet</string>
     <string name="share">Share</string>
     <string name="description_poster_show">Poster show</string>
+    <string name="favorite">Favorite</string>
 </resources>
